--- a/docs/js/3JS的6中继承方式.md
+++ b/docs/js/3JS的6中继承方式.md
@@ -7,14 +7,14 @@
 
 ## 原型链继承
 
-弊端：引用类型的数据，内存控件是共享问题，当一个放生变化时，另一个也会跟着改变。
+弊端：引用类型的数据，内存控件是共享问题，当一个发生变化时，另一个也会跟着改变。
 
 ```js
 const Parent() {
   this.name = 'parent';
   this.play = ['p1', 'p2']
 }
-Parent.protoype.getName = function () {
+Parent.prototype.getName = function () {
   return this.name
 }
 
@@ -23,6 +23,7 @@ const Child = function () {
 }
 
 Child.prototype = new Parent()
+Child.prototype.constructor = Child;
 
 const c1 = new Child()
 const c2 = new Child()
@@ -40,28 +41,27 @@ console.log("c2", c2.play); // ['p1', 'p2', 1]
 解决引用地址共享问题但只能继承父类实例的属性和方法，不能继承父类原型对象的属性和方法。
 
 ```js
-const Parent() {
-  this.name = 'parent';
-  this.play = ['p1', 'p2']
+function Parent() {
+  this.name = "parent";
+  this.play = ["p1", "p2"];
 }
-Parent.protoype.getName = function () {
-  return this.name
-}
+Parent.prototype.getName = function () {
+  return this.name;
+};
 
 const Child = function () {
-  Parent.call(this)
-  this.type = 'child'
-}
+  Parent.call(this);
+  this.type = "child";
+};
 
-const c1 = new Child()
-const c2 = new Child()
+const c1 = new Child();
+const c2 = new Child();
 
-c2.play.push('c2')
+c2.play.push("c2");
 
 console.log("c1", c1.play); // ['p1', 'p2']
 console.log("c2", c2.play); // ['p1', 'p2', 1]
-console.log("this.getName", c1.getName()) // Uncaught TypeError: Cannot read properties of undefined (reading 'getName')
-
+console.log("this.getName", c1.getName()); // Uncaught TypeError: Cannot read properties of undefined (reading 'getName')
 ```
 
 ## 混合继承
@@ -84,6 +84,7 @@ const Child = function () {
 };
 
 Child.prototype = new Parent();
+Child.prototype.constructor = Child;
 
 const c1 = new Child();
 const c2 = new Child();
